testsuite/tests/splice-imports/SI14.stderr
SI14.hs:9:21: error: [GHC-28914]
    • Stage error: ‘A’ is bound at stage {0} but used at stage 1
      Hint: quoting [| A |] or an enclosing expression would allow the quotation to be used in an earlier stage
    • In the Template Haskell quotation: 'A

SI14.hs:9:21: error: [GHC-28914]
    • Stage error: ‘A’ is bound at stage {0} but used at stage 1
      Hint: quoting [| A |] or an enclosing expression would allow the quotation to be used in an earlier stage
    • In the Template Haskell quotation: 'A

